# fastapi_controlwork_kuvatov_abylay

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/api/: application.py  router.py
src/app/api/material/: controller.py  routes.py
src/app/api/material/schemas/: requests.py  responses.py
src/app/api/subject/: controller.py  routes.py
src/app/api/subject/schemas/: requests.py  responses.py
src/app/core/: controller.py  schemas.py  settings.py
src/app/core/exc/: common.py  handlers.py  http.py
src/app/db/: conf.py
src/app/db/models/: __init__.py  base.py  material.py  subject.py
src/app/db/repositories/: base.py  material.py  subject.py
src/migrations/models/: 1_20240115101703_None.py
